# gagbot.js

./: .gitignore  Cargo.toml  README.md  bootstrap  bump_toolchain.sh  deploy  export_node_path  export_prod_mongo  package-lock.json  package.json  reset_db  run_compression_test  run_dev  run_mongo  run_prod  run_prod_mongo_migrate  rust-toolchain.toml  rustfmt.sh  sizes.txt
.github/workflows/: build_release.yaml
gagbot-rs/: .gitignore  Cargo.toml  doc  gagbot-rs.code-workspace  run_chihuahua  run_dev  run_prod_mongo  run_prod_mongo_migrate
gagbot-rs/migrations/04-reaction_roles_temp/: up.sql
gagbot-rs/migrations/06-interaction-roles/: up.sql
gagbot-rs/migrations/07-message_log/: up.sql
gagbot-rs/src/: config.rs  db.rs  embed.rs  ids.rs  interaction_roles.rs  lib.rs  message_count.rs  message_log.rs  permissions.rs
gagbot-rs/src/commands/: add_member.rs  config.rs  greet.rs  log.rs  mod.rs  permission.rs  promote.rs  stats.rs  testing.rs  utils.rs
gagbot-rs/src/db/: db_command.rs  mod.rs
gagbot-rs/src/db/queries/: config.rs  table_size.rs
gagbot-rs/src/discord_commands/: add_member.rs  config.rs  mod.rs  permission.rs  promote.rs  purge.rs  testing.rs  utils.rs
migrations/01-permissions/: up.sql
migrations/02-guild/: up.sql
migrations/03-config/: up.sql
migrations/05-message_count/: up.sql
migrations/08-message_index/: up.sql
migrations/08-message_log_with_id/: up.sql
migrations/09-message_log_with_id/: up.sql
migrations/10-message_index_data_transform/: up.sql
src/: Permissions.js  bot.js  embed.rs  error.rs  lib.rs  message_log.rs  permissions.rs
src/command/: Command.js
src/commands/: greet.rs  promote.rs
src/db/: background_jobs.rs  db_command.rs  mod.rs
src/db/queries/: message_log.rs  mod.rs
src/discord_commands/: add_member.rs  config.rs  mod.rs  permission.rs  promote.rs  purge.rs  stats.rs  testing.rs  utils.rs
src/modules/admin/: ActivityLog.js  events.js
src/modules/admin/commands/: prune.js  purge.js
src/modules/core/: events.js
src/modules/core/commands/: ping.js  prefix.js
src/modules/greet/: events.js
src/modules/logging/: Logger.js  events.js
src/modules/reactionroles/: events.js
src/responses/: ErrorEmbed.js  GagEmbed.js
(+14 files in other folders)
